--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+Version 1.17.0  (16 October 2017)
+
+- Added WCS service.
+  - Works using templates associated by regex.
+
+- Made the OLFS authentication aware in its http
+  activities by having it utilize the ~/.netrc credentials 
+  source or one of the same format specified in the configuration. 
+
 Version 1.16.4  (09 August 2017)
 
 - Repaired broken RDF responses.
