--- a/README
+++ b/README
@@ -4,6 +4,8 @@
 Hyrax Version 1.14.0  (16 October 2017)
 OLFS  Version 1.17.0  (16 October 2017)
 
+[![DOI](https://www.zenodo.org/badge/26560831.svg)](https://www.zenodo.org/badge/latestdoi/26560831)
+
 The file install.html or docs/index.html may have additional information...
 
 First:
