--- a/NEWS
+++ b/NEWS
@@ -1,3 +1,12 @@
+# OLFS Version 1.18.1 (10 December 2018)
+
+## Features:
+
+- Added new (beta) dynamic siteMap and robots.txt service.
+
+- Added confguration (to BES) for Site admin contact information that
+  also gets used in the JSON-LD DataCatalog content. 
+
 # OLFS Version 1.18.0 (26 September 2018)
 
 ## Features:
