--- a/NEWS
+++ b/NEWS
@@ -1,4 +1,4 @@
-# OLFS Version 1.18.1 (10 December 2018)
+# OLFS Version 1.18.2 (10 December 2018)
 
 ## Features:
 
@@ -6,6 +6,10 @@
 
 - Added confguration (to BES) for Site admin contact information that
   also gets used in the JSON-LD DataCatalog content. 
+
+# OLFS Version 1.18.1 (21 November 2018)
+
+- Minor changes mostly a release to support changes in the BES.
 
 # OLFS Version 1.18.0 (26 September 2018)
 
